--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
     </head>
     <body>
         <h1>Sejam bem vindos!</h1>
+        <ul>
+            <li>Joao</li>
+            <li>Pedro</li>
+            <li>Antonio</li>
+        </ul>
+        
     </body>
 </html>
